# LightShip

./: .gitignore  Cargo.toml  LICENSE  README.md
android/src/main/java/com/lightship/: LightShip.java
android/src/main/jni/: lightship_jni.cpp
c-api/include/: lightship.h
docs/: batchnorm.md  c-api.md  cpu-backend-comparison.md  cpu-backend-operators.md  cpu-performance-comparison.md  gemm-block-optimization.md  gpu-performance-comparison.md  lightship-vs-mnn-comparison.md  multi-threading-design.md  multi-threading-scheduler.md  onnx-parser.md  operator-fusion.md  performance-benchmark-2026-04-14.md  performance-benchmark-2026-04-15.md  phase10-gpu-platform.md  phase11-toolchain.md  phase6-graph-optimizer.md  phase7-quantization.md  phase8-transformer-operators.md  phase9-async-profiling.md  pooling-operator.md  session-executor.md  silu-operator.md  simd-optimization.md  softmax-implementation.md  tanh-operator.md  winograd-algorithm.md
examples/: Cargo.toml  README.md  async_inference.rs  basic_inference.rs
lightship-core/: Cargo.toml  build.rs
lightship-core/src/: lib.rs
lightship-core/src/api/: engine.rs  mod.rs  session.rs  tensor.rs
lightship-core/src/backend/: backend.rs  capabilities.rs  cpu.rs  gpu.rs  memory.rs  metal.rs  mod.rs
lightship-core/src/capi/: error.rs  handle.rs  mod.rs  types.rs
lightship-core/src/common/: error.rs  logger.rs  mod.rs  types.rs
lightship-core/src/cpu/: mod.rs  quantized_ops.rs  thread_scheduler.rs  winograd_conv2d.rs
lightship-core/src/executor/: graph_executor.rs  mod.rs  plan.rs  scheduler.rs
lightship-core/src/ir/: attribute.rs  fusion.rs  graph.rs  mod.rs  operator.rs  optimizer.rs  tensor.rs
lightship-core/src/memory/: allocator.rs  mod.rs  pool.rs  stats.rs
lightship-core/src/model/: error.rs  format.rs  loader.rs  metadata.rs  mod.rs  native.rs  onnx.rs
lightship-core/src/operator/: attention.rs  batchnorm.rs  convolution.rs  gelu.rs  layernorm.rs  matmul.rs  mod.rs  pooling.rs  sigmoid.rs  silu.rs  softmax.rs  tanh.rs
lightship-core/src/platform/: cpu_info.rs  mod.rs  simd.rs  thread_pool.rs
lightship-core/src/quantization/: helpers.rs  mod.rs  scale.rs  scheme.rs
lightship-core/src/runtime/: async_handle.rs  mod.rs  profiling.rs  timing.rs
lightship-core/tests/: backend_test.rs  cpu_backend_test.rs  executor_test.rs  graph_optimizer_test.rs  graph_test.rs  memory_test.rs  model_test.rs  onnx_integration_test.rs  quantization_test.rs  simd_benchmark_test.rs  tensor_test.rs
lightship-core/tests/fixtures/: conv_relu_model.onnx  relu_model.onnx
lightship-tools/: Cargo.toml
lightship-tools/src/: lib.rs
lightship-tools/src/benchmark/: mod.rs
lightship-tools/src/config/: mod.rs
lightship-tools/src/converter/: mod.rs
lightship-tools/src/visualizer/: mod.rs
