[package]
name = "lightship-core"
version = "0.1.0"
edition = "2021"
authors = ["LightShip Team"]
description = "LightShip: A lightweight edge-side neural network inference engine"
license = "MIT"
repository = "https://github.com/lightship/lightship"
readme = "README.md"

[dependencies]
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
rustc-hash = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
zip = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"

[build-dependencies]
version_check = "0.9"

[features]
default = []
std = []
