[package]
name = "lightship-tools"
version = "0.1.0"
edition = "2021"
description = "LightShip toolchain: converter, benchmark, visualizer"
authors = ["LightShip Team"]
license = "Apache-2.0"

[dependencies]
lightship-core = { path = "../lightship-core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
colored = "2.0"
indicatif = "0.17"
once_cell = "1.19"
terminal_size = "0.3"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "lightship-convert"
path = "src/bin/converter.rs"

[[bin]]
name = "lightship-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "lightship-info"
path = "src/bin/info.rs"

[features]
default = []
